--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongodb": "^6.11.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "next-intl": "^3.26.1",
     "nodemailer": "^6.9.16",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.2.0",
