--- a/package.json
+++ b/package.json
@@ -46,9 +46,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "@eslint/config-array": "^2.1.0",
-    "@eslint/object-schema": "^2.0.1",
-    "eslint": "^9.0.0-alpha.0",
+    "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
