--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,3 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "eslint:recommended"
-  ],
-  "rules": {
-    "no-unused-vars": "warn",
-    "no-console": "warn",
-    "@next/next/no-img-element": "off",
-    "react/no-unescaped-entities": "off"
-  },
-  "env": {
-    "browser": true,
-    "node": true,
-    "es6": true
-  }
+  "extends": "next/core-web-vitals"
 } 
