--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@phosphor-icons/react": "^2.1.7",
     "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^2.4.3",
+    "canvas": "^3.0.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.5",
@@ -37,6 +38,7 @@
     "react-quill": "^2.0.0",
     "react-responsive": "^10.0.0",
     "react-scroll-parallax": "^3.4.5",
+    "sharp": "^0.33.5",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
