--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@headlessui/react": "^2.0.0",
     "@heroicons/react": "^2.2.0",
     "@phosphor-icons/react": "^2.1.7",
+    "@tinymce/tinymce-react": "^5.1.1",
     "@types/nodemailer": "^6.4.17",
+    "@types/uuid": "^10.0.0",
     "bcryptjs": "^2.4.3",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
@@ -37,7 +39,8 @@
     "react-quill": "^2.0.0",
     "react-responsive": "^10.0.0",
     "react-scroll-parallax": "^3.4.5",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
