--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/uuid": "^10.0.0",
     "bcryptjs": "^2.4.3",
+    "canvas": "^3.1.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.5",
